# ChangeLog for app-dicts/sword-esv
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-dicts/sword-kjv/ChangeLog,v 1.1 2008/02/27 17:24:57 beandog Exp $

*sword-esv-1.0 (29 Dec 2009)

  29 Dec 2009; Nathan Brink <ohnobinki@ohnopublishing.net> +metadata.xml,
  +sword-esv-1.0.ebuild:
  Initial commit - adapted from Gentoo Portage's app-dicts/sword-kjv
