@@ -1,4 +1,24 @@
-DIST ESV-1.0.zip 3431630 RMD160 910b7c2841a3a49f8af20d5f82223bf8be37d725 SHA1 13841e89b4789eba5be6fb57a0248360df1947fa SHA256 3d6c283674a0996344f5dd096bcb2919eed9653b6576ac66447d51be21994828
-EBUILD sword-esv-1.0.ebuild 452 RMD160 fc1bdc4159df53871e94108a8cb09be0bb1c4b0b SHA1 533a483ca133f78286987277397a2c78939c7aaf SHA256 723d9ab4ead45e8632e5711f42d5e65038f7f21b0d3f12b72611c9c028378ebf
-MISC ChangeLog 411 RMD160 37c1b3543e6614a0dcf704c61e475f19a43b297e SHA1 81597c82e8a6276a4148258e2bc465f61250bf99 SHA256 45befc33b1f2df113463dff7051912e5de6078c5ef0a5f3950c2f949e414464a
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST ESV-1.0.1.zip 3431670 RMD160 00ba36b0f5304c091df3f229baaa7fa478848802 SHA1 6e63cc64b058729376e8a1f1beb4c1f1e1dcc638 SHA256 6f24c2d749c9ae44b48220c7b7c4049458e5431b29eaae0b0fe828cbb7df351d
+EBUILD sword-esv-1.0.1.ebuild 516 RMD160 953ac1b73f3ad297d2912c96796c0b21892b540b SHA1 1efaa8546ffb42f4e4803a936a1bea9962c025d9 SHA256 9a0151120b21ccd6cefa6d9fc26429f578914852aa68e3e92739af9731dd961f
+MISC ChangeLog 564 RMD160 408770881793686f5df2cafb1187f74a4aed57d0 SHA1 4d323b5696bd53ca5d52038c3239ab9acb53377c SHA256 fb0b152eff1cf4d4d8d3b203303950becd1f8f346e1604b89be928a243f5e1ba
 MISC metadata.xml 161 RMD160 790be5e70a454fc8cc8c563afa1a8923a4a2390b SHA1 16081376a31a7d63ac0b0e23d5307f525fdcd115 SHA256 e9a0c073227269258ad9f380c7c74e26ff816861d4b6a5b918ddcb3c01bc26d0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iQIcBAEBCAAGBQJMoVhBAAoJEHQ6UuhrqBBQb6kQAK+tnRIw2V0xgnATSor3Lurh
+85Ln/FvEMN4FtAJh/HjDGrkl2XcsxEcsyCIe5Q8JboGI85EOvR9AvU3iM74vnl7m
+aSWWrV3k8w+T+a+2v2hKuUf+mx2l74F33NcYddoPO7JVh7PcE75Nt/neScYcQsxO
+K8rpcOVX78i0vjtygbekL5UD8eRydSKPIXmNvl4RNeW00siecFA/87JBqkE0Ojnr
+LmybhslLB56H+t/wwP49w9ZQS8RI/noPHxbPtwSUvaQAAMEIYNMIBi6/EtG/rMpW
+1vrZ7aJiJuoqL9k7eYv4snz+sg5xG+j+NHWwVMErueYrFcvv4jaIfLEyfHdCX5r6
+CKcex7QDYR/pD4DcQj7xpvG+sf+FZ7wVyWtSIXrr7DkytV7r8+WKz3w/JpKHKJkg
+XRgUbfY3u4Z7vhCibvdAAKSqANuf7nnoYYhkSUzPuJmbQT2AEB1iomcsca0U8N9S
+Q/a3tBkHSWVHevIWOJfvl8TdGtihkPy2ad9JJ0YsuTq91JAn5cS5vjmF4e27FhmP
+9d0kkKiZ1ALFZwxkoh8G09GS9NKErmJv68Fybz3vORU9gO0I8il2KkMnhspMxOMs
+OSdAoB246CiV+Ve03w+NzzwUx8egTQ12qreMvSU5fRVuzsMOflOCG/DRIFwkqC7b
+autb5JoEDo7twNRrOc+g
+=bi7X
+-----END PGP SIGNATURE-----
