@@ -1,4 +1,4 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/app-dicts/sword-kjv/sword-kjv-2.3.ebuild,v 1.1 2008/02/27 17:24:57 beandog Exp $
 
@@ -8,5 +8,8 @@ inherit sword-module
 
 DESCRIPTION="English Standard Version Bible"
 HOMEPAGE="http://crosswire.org/sword/modules/ModInfo.jsp?modName=ESV"
+SRC_URI="mirror://ohnoproto/${SWORD_MODULE}-${PV}.zip"
+IUSE=""
+
 LICENSE="EnglishStandardVersion"
 KEYWORDS="~amd64 ~ppc ~x86 ~x86-fbsd"
