@@ -1,6 +1,11 @@
 # ChangeLog for app-dicts/sword-esv
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-dicts/sword-kjv/ChangeLog,v 1.1 2008/02/27 17:24:57 beandog Exp $
+
+  28 Sep 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> -sword-esv-1.0.ebuild,
+  +sword-esv-1.0.1.ebuild:
+  Bump to ESV-1.0.1.
 
 *sword-esv-1.0 (29 Dec 2009)
 
